<resources>
    <string name="app_name">Personal Dietitian</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <style name="MyCustomTextAppearance" parent="TextAppearance.Design.Tab">
        <item name="textAllCaps">false</item>
    </style>

    <!-- Label name for the activity Manifest -->
    <string name="register_label">Register</string>
    <string name="forget_label">Forget Password</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="profile_label">My Account</string>

    <!-- String values for LoginActivity and Sign Up -->
    <!--<string name="app_name">My Personal Dietician</string>-->
    <string name="hint_name">Username</string>
    <string name="hint_email">Email ID</string>
    <string name="hint_password">Password</string>
    <string name="text_register">Register</string>
    <string name="text_login">LOGIN</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="signUp_text">SIGN UP</string>
    <!--<string name="action_settings">Settings</string>-->
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="age">Age</string>
    <string name="contact">Contact</string>
    <string name="height">Height (In Feet)</string>
    <string name="weight">Weight</string>
    <string name="activityLevel">Activity Level</string>
    <string name="allergy">Allergy</string>
    <string name="foodHabit">Food Habit</string>
    <string name="genderMale">Male</string>
    <string name="genderFemale">Female</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailId">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

    <!-- Profile string data for user information -->
    <string name="userName">User Name :</string>
    <string name="email">Email Id :</string>
    <string name="userAge">Age :</string>
    <string name="userContact">Contact :</string>
    <string name="userGender">Gender :</string>
    <string name="userHeight">Height :</string>
    <string name="userWeight">Weight :</string>
    <string name="userActivityLevel">Activity Level :</string>
    <string name="userAllergy">Allergy :</string>
    <string name="userFoodHabit">Food Habit :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>

    <!-- Spinner data for activityLevel, foodHabit and allergy -->
    <string-array name="spinner_activityLevel">
        <item>High</item>
        <item>Moderate</item>
        <item>Low</item>
    </string-array>

    <string-array name="spinner_foodHabit">
        <item>Everything</item>
        <item>Vegetarian</item>
        <item>Non-Vegetarian</item>
        <item>Vegan</item>
    </string-array>

    <string-array name="spinner_allergy">
        <item>Nothing</item>
        <item>Peanuts</item>
        <item>Gluten</item>
        <item>Eggs</item>
        <item>Wheat</item>
        <item>Lactose</item>
    </string-array>

    <!-- Dashboard navigation drawer -->
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="others">Others</string>

    <!--  Navigation View String Values  -->
    <string name="home">Home</string>
    <string name="my_account">My Account</string>
    <string name="my_activity">My Activity</string>
    <string name="my_diet">My Diet</string>
    <string name="track_me">Track Me</string>
    <string name="blog">Health Blog</string>
    <string name="log">User Log</string>
    <string name="notification">Notification</string>
    <string name="log_out">Log Out</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="steps">0 Step</string>
    <string name="step_count">Step Count</string>
    <string name="step_count_value">6000</string>
    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="stairs">Stairs</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="distance">Distance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Activity and Meal report string values-->
    <string name="activity_report">ACTIVITY REPORT</string>
    <string name="food_and_nutrition_report">FOOD AND NUTRITION REPORT</string>
    <string name="str_fat">FAT</string>
    <string name="str_carbs">Carbs</string>
    <string name="str_protein">Protein</string>
    <string name="str_fiber">Fiber</string>
    <string name="str_sugar">Sugar</string>
    <string name="str_calories">Calories</string>
    <string name="str_other">Others</string>
    <string name="zero">0</string>

    <string name="username">User Name</string>
    <string name="user_name_email">UserName@gmail.com</string>

    <!-- Notification String value-->
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Array list for generic food list -->
    <string-array name="generic_food_title">
        <item>Salt</item>
        <item>Olive oil</item>
        <item>Pepper</item>
        <item>Egg</item>
        <item>Onions</item>
        <item>Butter</item>
        <item>Garlic</item>
        <item>Banana</item>
        <item>Chicken Breast</item>
        <item>Tomatoes</item>
        <item>Avocados</item>
        <item>Oatmeal</item>
        <item>Sugar</item>
        <item>Strawberries</item>
        <item>Peanut Butter</item>
        <item>Almond milk</item>
        <item>Lowfat milk</item>
        <item>Nonfat greek yogurt</item>
        <item>Tortillas</item>
        <item>Cayenne pepper</item>
        <item>Salsa</item>
        <item>Zucchini</item>
        <item>Apples</item>
        <item>Lime juice</item>
    </string-array>

    <string-array name="generic_food_second_title">
        <item>Table</item>
        <item>Salad or cooking</item>
        <item>Spices, black</item>
        <item>Whole, fresh eggs</item>
        <item>Raw</item>
        <item>Unsalted</item>
        <item>Raw</item>
        <item>Raw</item>
        <item>Broilers or fryers</item>
        <item>Red, ripe</item>
        <item>Raw</item>
        <item>Cereals</item>
        <item>Granulated white sugar</item>
        <item>Raw</item>
        <item>Chunk style</item>
        <item>Plain</item>
        <item>Fluid, 1% milk-fat</item>
        <item>Plain</item>
        <item>Ready-to-bake</item>
        <item>Spices</item>
        <item>Sauce</item>
        <item>Raw</item>
        <item>Raw</item>
        <item>Raw</item>
    </string-array>

    <!-- Array list for restaurant food list -->
    <string-array name="restaurant_food_title">
        <item>Chipotle Southwest</item>
        <item>Zucchini Sauteed</item>
        <item>Brown Rice</item>
        <item>Italian Dressing</item>
        <item>Buffalo Chicken Tenders</item>
        <item>Fajita Veggies</item>
        <item>Pinto Beans</item>
        <item>Basil Pesto Spread</item>
        <item>Beach Club Sandwich</item>
        <item>Small Fries</item>
        <item>Chipotle Mayo</item>
        <item>Roast Beef Sub</item>
        <item>Blueberry</item>
        <item>Ground Beef Patty</item>
        <item>Iced Coffee</item>
        <item>Beijing Beef</item>
        <item>Crab Cake</item>
        <item>Sourdough Baguette</item>
        <item>Double Chicken Chopped Salad</item>
        <item>Pepperoni Pizza</item>
        <item>White Chocolate Mocha</item>
        <item>Mocha Frappacino</item>
        <item>Cappucino</item>
        <item>Black Tea Lemonade</item>
    </string-array>

    <string-array name="restaurant_food_second_title">
        <item>Subway</item>
        <item>Country Buffet</item>
        <item>Chipotle</item>
        <item>Olive Garden</item>
        <item>Culvers</item>
        <item>Chipotle</item>
        <item>Chipotle</item>
        <item>Wendys</item>
        <item>Jimmy Jonh</item>
        <item>Carls Jr.</item>
        <item>Arbys</item>
        <item>Arbys</item>
        <item>Tutti Frutti</item>
        <item>Mooyah</item>
        <item>Dunkin Donuts</item>
        <item>Panda Express</item>
        <item>Hosss</item>
        <item>Panera Bread</item>
        <item>Subway</item>
        <item>Dominos Pizza</item>
        <item>Starbucks</item>
        <item>Starbucks</item>
        <item>McCafe</item>
        <item>Starbucks</item>
    </string-array>


    <!-- Search Hint Text-->
    <string name="hint_search_recipe">Search Recipe</string>
    <string name="please_enter_recipe">Please Enter your choice</string>

    <!-- Barcode fragment string values -->
    <string name="x_app_id">ce1025be</string>
    <string name="x_app_key">58dd8c3348822beb5545364bc73dbf9f</string>
    <string name="content_type">application/x-www-form-urlencoded</string>
    <string name="name">Name :</string>
    <string name="str_caloriess">Calories :</string>
    <string name="str_weight_">Weight :</string>
    <string name="str_sugar_">Sugar :</string>
    <string name="str_fat_">Fat :</string>
    <string name="str_carbs_">Carb :</string>
    <string name="str_protein_">Protein :</string>
    <string name="barcode_not_found">Barcode not found</string>
    <string name="add_food">Add Food</string>
    <string name="measure">Serving :</string>
    <string name="hint_search">Search</string>
    <string name="walking_for_history">Walking :</string>
    <string name="running_for_history">Running :</string>
    <string name="staris_for_history">Stairs :</string>
    <string name="goal">Daily calories burned goal</string>

</resources>
