<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                tools:context="com.ritikakhiria.fitnessnew.activity.Login"
                android:id="@+id/login_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/food_good">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#8C000000">

    <TableRow
        android:layout_marginTop="270dp"
        android:padding="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <EditText
                android:id="@+id/user_name"
                style="@style/edit_text_style"
                android:maxLines="1"
                android:hint="@string/hint_name"
                android:textColorHint="#ddFFFFFF"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/password"
                style="@style/edit_text_style"
                android:hint="@string/hint_password"
                android:textColorHint="#ddFFFFFF"
                android:inputType="textPassword"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/show_hide_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/show_pwd"
                    android:textColor="@color/white_greyish"
                    android:buttonTint="@color/white_greyish"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="5dp"
                    android:text="@string/forgot"
                    android:textColor="@color/white_greyish"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/login_button"
                style="@style/login_button_style"
                android:text="@string/text_login"
                android:textAllCaps="true"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/login_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/newUser"
                android:textColor="@color/white_greyish"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>
    </TableRow>

        </RelativeLayout>

</RelativeLayout>