<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:padding="5dp"
              android:gravity="right|top">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:src="@drawable/fitness"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/app_name"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:layout_toRightOf="@+id/img_logo"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:text="Breackfast"
            android:layout_toRightOf="@+id/img_logo"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            android:layout_below="@+id/tv_title"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/ll_voice"/>

        <LinearLayout
            android:id="@+id/ll_voice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true">

            <Button
                style="@style/login_button_style"
                android:id="@+id/btn_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textColor="@android:color/black"/>

            <Button
                style="@style/login_button_style"
                android:id="@+id/btn_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textColor="@android:color/black"/>

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>